fixed spacing issue in projectImage on index.html

--- a/css/index.css
+++ b/css/index.css
@@ -235,6 +235,12 @@ h5 {
   font-weight: bold;
   line-height: 7.5rem;
 }
+@media (max-width: 599px) {
+  .mainContent .jumbotron p {
+    font-size: 4.8rem;
+    line-height: 5.8rem;
+  }
+}
 .mainContent .features {
   max-width: 855px;
   margin: auto;
@@ -245,9 +251,19 @@ h5 {
   align-items: center;
   padding-top: 5%;
 }
+@media (max-width: 599px) {
+  .mainContent .features .featureContent {
+    flex-direction: column;
+  }
+}
 .mainContent .features .featureContent .featureText {
   max-width: 48%;
   margin: 1%;
+}
+@media (max-width: 599px) {
+  .mainContent .features .featureContent .featureText {
+    max-width: 68%;
+  }
 }
 .mainContent .features .featureContent .featureText h1 {
   font-size: 2.8rem;
@@ -263,9 +279,19 @@ h5 {
   margin-top: 8%;
   padding: 4%;
 }
+@media (max-width: 599px) {
+  .mainContent .features .featureContent .featureText button {
+    width: 100%;
+  }
+}
 .mainContent .features .featureContent .featureImage {
   max-width: 48%;
   margin: 1%;
+}
+@media (max-width: 599px) {
+  .mainContent .features .featureContent .featureImage {
+    max-width: 100%;
+  }
 }
 .mainContent .features .featureContent .featureImage img {
   max-width: 100%;
@@ -289,8 +315,20 @@ h5 {
   color: #222222;
   background-color: #d7d7d7;
   bottom: -5%;
-  right: 0%;
   padding: 3%;
+}
+@media (max-width: 599px) {
+  .mainContent .recentProjects div .projectImage h2 {
+    right: 35%;
+  }
+}
+.mainContent .recentProjects div .projectImage .right {
+  right: 0%;
+}
+@media (max-width: 599px) {
+  .mainContent .recentProjects div .projectImage .right {
+    right: 35%;
+  }
 }
 .mainContent .recentProjects div .projectContent {
   display: flex;
@@ -311,6 +349,11 @@ footer {
   justify-content: space-around;
   background-color: #828282;
   color: #FFFFFF;
+}
+@media (max-width: 599px) {
+  footer {
+    flex-direction: column;
+  }
 }
 footer .contactForm {
   padding: 2%;
