--- a/less/footer.less
+++ b/less/footer.less
@@ -3,6 +3,9 @@ footer {
     justify-content: space-around;
     background-color: #828282;
     color: #FFFFFF;
+    @media @mobile {
+        flex-direction: column;
+    }
     .contactForm{
         padding: 2%;
         h3{
