--- a/less/mainContent.less
+++ b/less/mainContent.less
@@ -15,6 +15,10 @@
             font-size: 6.4rem;
             font-weight: bold;
             line-height: 7.5rem;
+            @media @mobile {
+                font-size: 4.8rem;
+                line-height: 5.8rem;
+            }
         }
     }
     .features {
@@ -25,9 +29,15 @@
             display: flex;
             align-items: center;
             padding-top: 5%;
+            @media @mobile {
+                flex-direction: column;
+            }
             .featureText {
                 max-width: 48%;
                 margin: 1%;
+                @media @mobile {
+                    max-width: 68%;
+                }
                 h1 {
                     font-size: 2.8rem;
                 }
@@ -41,11 +51,17 @@
                     font-size: 1.8rem;
                     margin-top: 8%;
                     padding: 4%;
+                    @media @mobile{
+                    width: 100%;
+                    }
                 }
             }
             .featureImage {
                 max-width: 48%;
                 margin: 1%;
+                @media @mobile{
+                    max-width: 100%;
+                    }
                 img {
                     max-width: 100%;
                 }
@@ -70,8 +86,16 @@
                     color: #222222;
                     background-color: #d7d7d7;
                     bottom: -5%;
-                    right: 0%;
                     padding: 3%;
+                    @media @mobile {
+                        right: 35%;
+                    }
+                }
+                .right {
+                    right: 0%;
+                    @media @mobile {
+                        right: 35%;
+                    }
                 }
             }
             .projectContent {
